--- a/requirements.txt
+++ b/requirements.txt
@@ -1,4 +1,5 @@
 asgiref==3.2.7
+dj-database-url==0.4.2
 Django==3.0.6
 django-cors-headers==3.3.0
 django-filter==2.2.0
@@ -6,6 +7,7 @@ djangorestframework==3.11.0
 djangorestframework-simplejwt==4.4.0
 drf-nested-routers==0.91
 flake8==3.8.2
+gunicorn==20.0.4
 importlib-metadata==1.6.0
 isort==4.3.21
 Markdown==3.2.2
@@ -16,4 +18,5 @@ pyflakes==2.2.0
 PyJWT==1.7.1
 pytz==2020.1
 sqlparse==0.3.1
+whitenoise==5.0.1
 zipp==3.1.0
