--- a/requirements.txt
+++ b/requirements.txt
@@ -6,6 +6,7 @@ django-filter==2.2.0
 djangorestframework==3.11.0
 djangorestframework-simplejwt==4.4.0
 drf-nested-routers==0.91
+factory-boy==2.12.0
 flake8==3.8.2
 gunicorn==20.0.4
 importlib-metadata==1.6.0
